2002-02-05  Duncan Mak  <duncan@ximian.com>

	* SymDocumentType.cs: 	
	* SymLanguageType.cs: 
	* SymLanguageVendor.cs: Added to CVS. 

2002-01-07  Duco Fijma <duco@lorentz.xs4all.nl>
	* Finilized SymAddressKind enum

2002-01-06  Duco Fijma <duco@lorentz.xs4all.nl>
	* Created SymAddressKind enum
	* Created all interfaces 
	* Created dummy implementation for SymbolToken struct