@@ -12,13 +12,14 @@ namespace System.Diagnostics.SymbolStore
 
 public interface ISymbolDocument {
 	
-	Guid CheckSymAlgorithmId {get; }
+	Guid CheckSumAlgorithmId {get; }
 	Guid DocumentType {get; }
 	bool HasEmbeddedSource {get; }
 	Guid Language {get; }	
 	Guid LanguageVendor {get; }
 	int SourceLength {get; }
 	string URL {get; }
+	
 
 	int FindClosestLine (int line);
 	byte[] GetCheckSum ();
