@@ -15,6 +15,7 @@ public interface ISymbolNamespace {
 	string Name {get ;}
 
 	ISymbolNamespace[] GetNamespaces ();
+	ISymbolVariable[] GetVariables ();
 }
 
 }
